Algne muusika kasti animatsioon tehtud

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Interactive Box UI</title>
+  <link rel="stylesheet" href="main-styles.css">
+  <script src="animations.js"></script>
 </head>
 <body>
-    
+  <div class="main">
+   <div class="box-container" id="box">
+      <div class="box-half box-top" style="background-image: url('images/music-top.png'); background-size: cover;">
+      </div>
+      <div class="box-half box-bottom" style="background-image: url('images/music-bott.png'); background-size: cover; background-position: bottom;">
+      </div>
+   </div>
 </body>
 </html>
