vaike parandus et naeks ilus valja

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="main">
    <div class="box-container" id="box">
-      <div class="box-half box-top" style="background-image: url('images/music-top.png'); background-size: cover;">
+      <div class="box-half" style="background-image: url('images/music-top.png'); background-size: cover;">
       </div>
-      <div class="box-half box-bottom" style="background-image: url('images/music-bott.png'); background-size: cover; background-position: bottom;">
+      <div class="box-half" style="background-image: url('images/music-bott.png'); background-size: cover; background-position: bottom;">
       </div>
    </div>
 </body>
