--- a/index.html
+++ b/index.html
@@ -1,67 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Interactive Music Filter</title>
-  <link rel="stylesheet" href="headerfooter.css" />
-  <script src="headerfooter.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Must taust ja ringid</title>
+  <link rel="stylesheet" href="headerfooter.css">
 </head>
-<header>
-  <div class="filters-header">
-    <h2 class="filters-title">Filters</h2>
-    <button class="arrow-button" onclick="toggleFilters()">&#9660;</button>
-  </div>
-</header>
-
 <body>
-  <div class="circle top-circle"></div>
   <header>
-    <!-- Menüüst eemaldasin sign up nupu -->
-  </header>
-
-  <main>
-    <div class="content">
-      <!-- Filters -->
-
-
-      <div class="filters-section" id="filtersSection">
-        <select>
-          <option value="">Select Genre</option>
-          <option value="pop">Pop</option>
-          <option value="rock">Rock</option>
-          <option value="jazz">Jazz</option>
-          <option value="classical">Classical</option>
+    <span class="header-text">Filters</span>
+    <button class="arrow-button" id="arrow-button"></button>
+    <div class="filters" id="filters">
+      <div class="filter-item">
+        <label for="genre">Genre:</label>
+        <select id="genre">
+          <option value="Classical">Classical</option>
+          <option value="Pop Music">Pop Music</option>
+          <option value="Rock Music">Rock Music</option>
         </select>
-        <select>
-          <option value="">Select Language</option>
+      </div>
+      <div class="filter-item">
+        <label for="language">Language:</label>
+        <select id="language">
           <option value="english">English</option>
-          <option value="spanish">Spanish</option>
+          <option value="estonian">Estonian</option>
           <option value="french">French</option>
-          <option value="german">German</option>
         </select>
-        <button>Submit</button>
-      </div>
-
-      <div class="music-note">♪</div>
-
-      <div class="signup-section" id="signupSection">
-        <input type="text" placeholder="Username" />
-        <input type="password" placeholder="Password" />
-        <button>Log In</button>
       </div>
     </div>
-  </main>
+  </header>
+  <div class="circle top" id="top-circle"></div>
+  <div class="circle bottom" id="bottom-circle"></div>
 
-  <!-- Footer -->
   <footer>
-    <div class="signup-header">
-      <button class="arrow-button" onclick="showSignup()">&#9650;</button>
-      <h2 class="signup-title">Sign Up</h2>
+    
+    <button class="arrow-button-footer" id="arrow-button-footer"></button>
+    <div class="Sign_up-footer" id="Sign_up-footer">
+      <div class="Sign_up-item">
+        <label for="User-footer">User:</label>
+        <input id="User-footer" type="text" placeholder="username">
+      </div>
+      <div class="Sign_up-item">
+        <label for="Password-footer">Password:</label>
+        <input id="Password-footer" type="text" placeholder="Password">
+      </div>
     </div>
+    <span class="footer-text">Sign up</span>
   </footer>
-  
-
-  <div class="circle bottom-circle"></div>
+  <script src="headerfooter.js"></script>
 </body>
 </html>
