--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 <body>
   <div class="main">
    <div class="box-container" id="box">
-      <div class="box-half" style="background-image: url('images/music-top.png'); background-size: cover;">
+      <div class="box-half box-top" style="background-image: url('images/music-top.png'); background-size: cover;">
       </div>
-      <div class="box-half" style="background-image: url('images/music-bott.png'); background-size: cover; background-position: bottom;">
+      <div class="box-half box-bottom" style="background-image: url('images/music-bott.png'); background-size: cover; background-position: bottom;">
       </div>
+      <div class="box-content">
+         <div class="note-box"></div>
+         <div class="spotify-wrapper">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3oEkrIfXfSh9zGnE7eBzSV?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3z8h0TU7ReDPLIbEnYhWZb?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/54pvEYFocTlvIAQOfXSjqV?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+         </div>
+       </div>
    </div>
 </body>
 </html>
