favicon ja logo integreeritud

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="main-styles.css">
   <script src="animations.js"></script>
   <link rel="stylesheet" href="headerfooter.css">
+  <link rel="icon" type="image/png" href="images/LogoVaike.PNG">
 </head>
 <body>
    <header>
-      <span class="header-text">Filters</span>
+      <div class="header-top">
+         <span class="header-text">Filters</span>
+         <img src="images/LogoVaike.PNG" alt="Logo" class="header-logo" />
+       </div>
       <button class="arrow-button" id="arrow-button"></button>
       <div class="filters" id="filters">
         <div class="filter-item">
