--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
      </div>
    </div>
    <span class="footer-text">Sign up</span>
+   <p><a href="feedback.html" class="feedback-link">Leave Feedback</a></p>
+
  </footer>
  <script src="headerfooter.js"></script>
 </body>
