--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
   <div class="main">
    <div class="box-container" id="box">
-      <div class="box-half box-top" style="background-image: url('images/music-top.png'); background-size: cover;">
+      <div class="box-half box-top" style="background-image: url('images/musicNote.png'); background-size: cover; background-position: top;">
       </div>
-      <div class="box-half box-bottom" style="background-image: url('images/music-bott.png'); background-size: cover; background-position: bottom;">
+      <div class="box-half box-bottom" style="background-image: url('images/musicNote.png'); background-size: cover; background-position: bottom;">
       </div>
       <div class="box-content">
          <div class="note-box"></div>
