kommentaarid ja vaiksed parandused

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="main-styles.css">
   <script src="animations.js"></script>
   <link rel="stylesheet" href="headerfooter.css">
-  <link rel="icon" type="image/png" href="images/LogoVaike.PNG">
+  <link rel="icon" type="image/png" href="images/LogoVaike.PNG"> <!-- favicon -->
 </head>
 <body>
    <header>
