--- a/feedback.html
+++ b/feedback.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Feedback</title>
-  <link rel="stylesheet" href="feedbackStyle.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Feedback</title>
+<link rel="stylesheet" href="feedbackStyle.css" />
+<link rel="icon" type="image/png" href="images/LogoVaike.PNG"> <!-- favicon -->
 </head>
 <body>
-  <main class="feedback-page">
-    <form class="feedback-form">
-      <h1>Feedback</h1>
+<main class="feedback-page">
+   <form class="feedback-form">
+      <div class="headeresque">
+         <h1>Feedback</h1>
+         <img src="images/LogoVaike.PNG" alt="Logo" class="header-logo" /> <!-- logo -->
+      </div>
+
       <label for="message">Your Message</label>
-      <textarea id="message" name="message" rows="6" required></textarea>
+      <textarea id="message" name="message" rows="6" required></textarea> <!-- tagasiside sisestamise kast -->
 
       <div class="actions">
-        <button type="submit">Submit</button>
-        <a href="/" class="back-link">Back to Home</a>
+         <button type="submit">Submit</button>
+         <a href="/" class="back-link">Back to Home</a> <!-- viib tagasi main lehte -->
       </div>
-    </form>
-  </main>
+   </form>
+</main>
 </body>
 </html>
