--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
    <header>
-      <div class="header-top">
+    <div class="header-top">
          <span class="header-text">Filters</span><!-- siin on filters text -->
          <img src="images/LogoVaike.PNG" alt="Logo" class="header-logo" /><!-- siin on logo -->
        </div>
       <button class="arrow-button" id="arrow-button"></button><!-- siin on headeris olev nool -->
       <div class="filters" id="filters"><!-- siin on filters kastid ja nende valikud -->
+        <a href="aboutUs.html" id="about-link" class="aboutUs-link">About Us</a>
+
         <div class="filter-item">
           <label for="genre">Genre:</label>
           <select id="genre">
